--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec \"npm test\""
+    "test-watch": "nodemon --exec \"npm test\"",
+    "istanbul": "istanbul cover _mocha server/**/*.test.js",
+    "watch": "webpack -d --watch",
+    "build:dev": "webpack -d",
+    "run-server:dev": "nodemon dist/server.js -e js --watch dist/server.js assets/main.js",
+    "start:dev": "npm-run-all build:dev --parallel watch run-server:dev"
   },
   "engines": {
     "node": "9.3.0"
@@ -14,21 +19,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@athena/eslint-config-app-fabric": "^1.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
     "crypto-js": "^3.1.6",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "http-status-codes": "^1.3.0",
     "jsonwebtoken": "^7.1.9",
     "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9",
     "nesh": "^1.7.0",
-    "validator": "^5.6.0"
+    "validator": "^5.6.0",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "expect": "^1.20.2",
+    "istanbul": "^0.4.5",
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2",
-    "supertest": "^2.0.0"
+    "npm-run-all": "^4.1.3",
+    "supertest": "^2.0.0",
+    "webpack-dev-server": "^3.1.4"
   }
 }
